--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/cabecalho.css">
-    <link rel="stylesheet" href="css/galeria.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/cabecalho.css">
+    <link rel="stylesheet" href="assets/css/galeria.css">
+    <link rel="stylesheet" href="assets/css/responsividade.css">
 </head>
 <body>
     <header class="cabecalho">
         <div class="cabecalho__nav">
-            <img src="img/logo.png" alt="logo da Alura Geek" class="cabecalho__nav-logo">
+            <div class="cabecalho__nav-Searchbox">
+                <img src="assets/img/logo.png" alt="logo da Alura Geek" class="cabecalho__nav-logo">
+                <fieldset class="searchbox__inputField">
+                    <input type="text"class="searchbox__input" placeholder="O que deseja encontrar?">
+                    <div class="searchbox__button">
+                </fieldset>
+            </div>
             <a href="#" class="cabecalho__nav-btnLogin">Login</a>
-            <div class="cabecalho__nav-Searchbox"><input type="text"class="Searchbox__input"></label><img src="img/searchIcon.png" alt="Icone de Busca" class="Searchbox__button"></div>
         </div>
         <div class="cabecalho__banner">
             <div class="banner__informacoes">
                 <h1 class="banner__informacoes-titulo">Dezembro Promocional</h1>
                 <p class="banner__informacoes-texto">Produtos selecionados com 33% de desconto</p>
-                <a href="" class="banner__informacoes-botao">Ver Consoles</a>
+                <a href="#" class="banner__informacoes-botao">Ver Consoles</a>
             </div>
         </div>
     </header>
@@ -37,38 +43,54 @@
                     <h1>Star Wars</h1>
                     <a href="#">Ver tudo</a>
                 </header>
-                <div class="vitrine__conteudo">
+                <div class="vitrine__linhaProdutos">
                     <ul class="vitrine__grid">
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
-                                <img src="" alt="" class="grid-item__imagem">
-                                <h2 class="grid-item__nome"></h2>
-                                <p class="grid-item__preco"></p>
-                                <a href="" class="grid-item__link"></a>
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod1.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
-                                <img src="" alt="" class="grid-item__imagem">
-                                <h2 class="grid-item__nome"></h2>
-                                <p class="grid-item__preco"></p>
-                                <a href="" class="grid-item__link"></a>
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod2.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
-                                <img src="" alt="" class="grid-item__imagem">
-                                <h2 class="grid-item__nome"></h2>
-                                <p class="grid-item__preco"></p>
-                                <a href="" class="grid-item__link"></a>
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod3.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
-                                <img src="" alt="" class="grid-item__imagem">
-                                <h2 class="grid-item__nome"></h2>
-                                <p class="grid-item__preco"></p>
-                                <a href="" class="grid-item__link"></a>
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod4.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
+                            </div>
+                        </li>
+                        <li class="vitrine__grid-item">
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod5.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
+                            </div>
+                        </li>
+                        <li class="vitrine__grid-item">
+                            <div class="vitrine__produto">
+                                <img src="assets/img/starwars-prod6.png" alt="" class="grid-item__imagem">
+                                <h2 class="grid-item__nome">ProdutoXYZ</h2>
+                                <p class="grid-item__preco">R$ 60,00</p>
+                                <a href="" class="grid-item__link">Ver produto</a>
                             </div>
                         </li>
                     </ul>
@@ -79,10 +101,10 @@
                     <h1>Consoles</h1>
                     <a href="#">Ver tudo</a>
                 </header>
-                <div class="vitrine__conteudo">
+                <div class="vitrine__linhaProdutos">
                     <ul class="vitrine__grid">
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -90,7 +112,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -98,7 +120,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -106,7 +128,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -121,10 +143,10 @@
                     <h1>Diversos</h1>
                     <a href="#">Ver Tudo</a>
                 </header>
-                <div class="vitrine__conteudo">
+                <div class="vitrine__linhaProdutos">
                     <ul class="vitrine__grid">
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -132,7 +154,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -140,7 +162,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
@@ -148,7 +170,7 @@
                             </div>
                         </li>
                         <li class="vitrine__grid-item">
-                            <div class="grid-item-conteudo">
+                            <div class="vitrine__produto">
                                 <img src="" alt="" class="grid-item__imagem">
                                 <h2 class="grid-item__nome"></h2>
                                 <p class="grid-item__preco"></p>
